[tool.poetry]
name = "sphinx-blue-robotics-theme"
version = "0.0.1"
description = "Sphinx theme for BlueRobotics documentation projects"
authors = ["TechDocs Studio <info@techdocs.studio>"]
exclude = [".github", "docs", ]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
myst-parser = "^4.0.0"
sphinx-immaterial = "^0.12.4"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
sphinx-autobuild = "^2024.10.3"

[build-system]
requires = ["poetry>=1.8.0"]
build-backend = "poetry.masonry.api"
